<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context=".UsernamePrompt">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/userGreeting"
        android:layout_marginTop="50dp"
        android:fontFamily="@font/bungee"
        android:textSize="40sp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/prompt"
        android:fontFamily="@font/antic"
        android:layout_marginTop="320dp"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="350dp">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/userFirstNameField"
            android:hint="@string/userFirstName"
            android:inputType="textPersonName"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

        </com.google.android.material.textfield.TextInputEditText>

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/userLastNameField"
            android:hint="@string/userLastName"
            android:inputType="textPersonName"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

        </com.google.android.material.textfield.TextInputEditText>

        <Button
            android:id="@+id/JumpToPhoneNo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#fff"
            android:textColor="@color/white"
            android:text="@string/next" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:fontFamily="@font/antic"
            android:text="@string/signIn"/>

        <Button
            android:id="@+id/signIn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#000"
            android:textColor="#fff"
            android:layout_marginTop="30dp"
            android:text="@string/signInText" />


    </LinearLayout>


</FrameLayout>


