<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".otpEntry">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/otp"
        android:fontFamily="@font/bungee"
        android:textSize="40sp"
        android:layout_marginTop="100dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:orientation="vertical">

        <com.chaos.view.PinView
            android:id="@+id/digit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="140dp"
            app:itemCount="6"
            app:itemWidth="50dp"
            app:itemHeight="50dp"
            android:layout_gravity="center"
            app:itemRadius="5dp"
            app:lineColor="@color/black"
            android:inputType="number"
            android:cursorVisible="true"
            app:hideLineWhenFilled="true"
            style="@style/PinWidget.PinView"/>

        <Button
            android:id="@+id/otpVerificationProceed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginTop="100dp"
            android:text="@string/next" />

        <Button
            android:id="@+id/otpVerificationAbort"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="250dp"
            android:layout_marginTop="-46dp"
            android:text="@string/previous" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="120dp"
            android:layout_marginTop="50dp"
            android:text="@string/resendOtp" />

        <TextView
            android:id="@+id/secondsRemaining"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="172dp"
            android:layout_marginTop="10dp"
            android:text="@string/secondsRemaining" />


        <Button
            android:id="@+id/otpResend"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="138dp"
            android:layout_marginTop="12dp"
            android:enabled="false"
            android:text="@string/resend" />


    </LinearLayout>



</FrameLayout>