<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".signInPrompt">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/PhoneNo"
        android:layout_marginTop="150dp"
        android:fontFamily="@font/bungee"
        android:textSize="30sp"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="100dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/phoneNoField2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="150dp"
            android:autofillHints="phone"
            android:inputType="phone"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:hint="@string/Phone">
        </com.google.android.material.textfield.TextInputEditText>

        <Button
            android:id="@+id/phoneNoNextButton2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/next"
            android:layout_marginTop="30dp"
            android:layout_marginStart="20dp"/>

        <Button
            android:id="@+id/prevButton2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/previous"
            android:layout_marginTop="50dp"
            android:layout_marginStart="20dp"/>
    </LinearLayout>


</FrameLayout>