<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PhoneNoPrompt">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fontFamily="@font/bungee"
        android:text="@string/PhoneNo"
        android:layout_marginTop="150dp"
        android:textSize="30sp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="100dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/phoneNoField"
            android:layout_width="313dp"
            android:layout_height="57dp"
            android:layout_marginTop="220dp"
            android:autofillHints="phone"
            android:inputType="phone"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:hint="@string/Phone" >
        </com.google.android.material.textfield.TextInputEditText>

        <Button
            android:id="@+id/phoneNoNextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="30dp"
            android:background="#000"
            android:text="@string/next"
            android:textColor="#fff" />

        <Button
            android:id="@+id/prevButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#000"
            android:textColor="#fff"
            android:layout_marginStart="20dp"
            android:text="@string/previous"
            android:layout_marginTop="20dp" />

    </LinearLayout>



</FrameLayout>