<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    tools:context=".ProfilePicture">

    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/uploadPhoto"
        android:textSize="25sp"
        android:fontFamily="@font/bungee"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:layout_marginTop="70dp"
            android:id="@+id/uploadPhoto"
            android:layout_width="200dp"
            android:layout_height="180dp"
            />

        <Button
            android:id="@+id/uploadButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/upload" />

        <Button
            android:id="@+id/loadPasswordFragment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/next"/>

    </LinearLayout>

</FrameLayout>