<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".signInPassword">

    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="230dp"
        android:fontFamily="@font/bungee"
        android:textSize="30sp"
        android:text="@string/passwordRequest" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:padding="20dp"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/signInPasswordField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="300dp"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:autofillHints="password"
            app:passwordToggleEnabled="false">
        </com.google.android.material.textfield.TextInputEditText>


        <Button
            android:id="@+id/passwordNextButton2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/next"
            android:layout_marginTop="35dp"/>

    </LinearLayout>


</FrameLayout>